--- a/index.html
+++ b/index.html
@@ -4,8 +4,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
-  <body></body>
+  <body>
+    <h1>Heading 1</h1>
+    <h2>Heading 2</h2>
+    <h3>Heading 3</h3>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia nihil
+      quaerat ex distinctio voluptatum saepe eos, odit quisquam, placeat
+      deleniti officia eaque? Repellat nihil impedit dolorum reprehenderit fugit
+      illo veniam? Soluta repudiandae sunt commodi accusamus natus nam
+      necessitatibus eaque cumque possimus sit! Aperiam quas eveniet animi
+      voluptate natus reiciendis earum.
+    </p>
+  </body>
 </html>
