--- a/index.html
+++ b/index.html
@@ -12,17 +12,5 @@
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
-  <body>
-    <h1>Heading 1</h1>
-    <h2>Heading 2</h2>
-    <h3>Heading 3</h3>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia nihil
-      quaerat ex distinctio voluptatum saepe eos, odit quisquam, placeat
-      deleniti officia eaque? Repellat nihil impedit dolorum reprehenderit fugit
-      illo veniam? Soluta repudiandae sunt commodi accusamus natus nam
-      necessitatibus eaque cumque possimus sit! Aperiam quas eveniet animi
-      voluptate natus reiciendis earum.
-    </p>
-  </body>
+  <body></body>
 </html>
