--- a/index.html
+++ b/index.html
@@ -13,25 +13,22 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <div style="width: 50%; padding: 4rem">
-      <div class="plan plan--popular">
-        <div class="card card--secondary">
-          <header class="card__header">
-            <h3 class="plan__name">Entry</h3>
-            <span class="plan__price">$14</span>
-            <span class="plan__billing-cycle">/month</span>
-            <span class="badge badge--secondary badge--small">10% OFF</span>
-            <span class="plan__description">Easy start on the cloud</span>
-          </header>
-          <div class="card__body">
-            <ul class="list list--tick">
-              <li class="list__item">Unlimited Website</li>
-              <li class="list__item">Item 2</li>
-              <li class="list__item">Item 3</li>
-            </ul>
-            <button class="btn btn--outline btn--block">Buy Now</button>
-          </div>
-        </div>
+    <div class="media">
+      <div class="media__image">
+        <svg class="icon icon--primary">
+          <use xlink:href="images/sprite.svg#snap"></use>
+        </svg>
+      </div>
+      <div class="media__body">
+        <h3 class="media__title">Easy Start & Managed Updates</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta
+          maiores, mollitia id ullam atque rem eos suscipit impedit a optio
+          deserunt labore natus ratione libero illum laborum animi, assumenda
+          ipsa saepe provident dignissimos magnam? Corrupti, expedita a
+          repudiandae aliquid minima itaque natus, neque saepe modi esse ipsa.
+          Asperiores, ex quos?
+        </p>
       </div>
     </div>
   </body>
