--- a/index.html
+++ b/index.html
@@ -13,23 +13,25 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <div class="media">
-      <div class="media__image">
-        <svg class="icon icon--primary">
-          <use xlink:href="images/sprite.svg#snap"></use>
-        </svg>
-      </div>
-      <div class="media__body">
-        <h3 class="media__title">Easy Start & Managed Updates</h3>
-        <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta
-          maiores, mollitia id ullam atque rem eos suscipit impedit a optio
-          deserunt labore natus ratione libero illum laborum animi, assumenda
-          ipsa saepe provident dignissimos magnam? Corrupti, expedita a
-          repudiandae aliquid minima itaque natus, neque saepe modi esse ipsa.
-          Asperiores, ex quos?
-        </p>
-      </div>
-    </div>
+    <blockquote class="quote">
+      <p class="quote__text">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia
+        architecto placeat reprehenderit omnis unde saepe ad. Sequi molestias ex
+        nihil.
+      </p>
+      <footer>
+        <div class="media">
+          <div class="media__image">
+            <svg class="icon icon--primary quote__line">
+              <use xlink:href="images/sprite.svg#line"></use>
+            </svg>
+          </div>
+          <div class="media__body">
+            <h3 class="media__title quote__author">John Smith</h3>
+            <p class="quote__organization">ABC Company</p>
+          </div>
+        </div>
+      </footer>
+    </blockquote>
   </body>
 </html>
