--- a/index.html
+++ b/index.html
@@ -12,20 +12,7 @@
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
-  <body style="padding: 5rem">
-    <div class="callout callout--primary">
-      <div class="grid grid--1by2">
-        <div class="callout__content">
-          <h2 class="callout__heading">Ready to Get Started?</h2>
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus
-            nihil pariatur commodi voluptatem sunt, architecto molestiae
-            voluptates. Sed harum praesentium et perferendis nihil voluptas quod
-            mollitia maxime itaque quisquam. Magnam.
-          </p>
-        </div>
-        <a href="#" class="btn btn--secondary btn--stretched">Get Started</a>
-      </div>
-    </div>
+  <body>
+    <script src="js/main.js"></script>
   </body>
 </html>
